Closed Bug 1245038 Opened 8 years ago Closed 8 years ago

On screen keyboard isn't visible after inputing character via IME on command prompt

Categories

(Core :: Widget: Win32, defect)

Unspecified
Windows
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: m_kato, Assigned: m_kato)

Details

Attachments

(1 file)

- Env
Windows 10
Microsoft Japanese IME
Nightly 2016-02-01

- Step
1. Set up tablet mode with Japanese IME
2. Launch Firefox
3. Focus to awesome bar, then on software keyboard appears
4. Lanuch cmd.exe
5. Turn on IME and input any Japanese text such as 'ああああ'
6. Back to Firefox
7. Focus to searchbox on UX

- Result
Software keyboard is never shown until other application process shows software keyboard
7
On screen keyboard is sometimes invisible even if IsWindowEnabled(osk) == TRUE.  So We should call tabtip.exe even if it is invisible.

Review commit: https://reviewboard.mozilla.org/r/33227/diff/#index_header
See other reviews: https://reviewboard.mozilla.org/r/33227/
Attachment #8714715 - Flags: review?(gijskruitbosch+bugs)
Comment on attachment 8714715 [details]
MozReview Request: Bug 1245038 - Show on screen keyboard even if tip window is invisible. r?Gijs

https://reviewboard.mozilla.org/r/33227/#review29953

Please get review from a peer / someone who knows the widget code. Try masayuki or smaug. I'd redirect it myself but it seems I can't do that in reviewboard.
Attachment #8714715 - Flags: review?(gijskruitbosch+bugs)
Attachment #8714715 - Flags: review?(masayuki)
Comment on attachment 8714715 [details]
MozReview Request: Bug 1245038 - Show on screen keyboard even if tip window is invisible. r?Gijs

https://reviewboard.mozilla.org/r/33227/#review30073

I guess that this should work. But this changes the behavior of IMEHandler::DismissOnScreenKeyboard(). So, it might be better to add a bool argument which check the visibility of OSK. If you don't see any problem around this, r=masayuki.
Attachment #8714715 - Flags: review?(masayuki) → review+
https://hg.mozilla.org/mozilla-central/rev/db95299f4d30
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.