Bug 1245038 - Show on screen keyboard even if tip window is invisible. r=masayuki

On screen keyboard is sometimes invisible even if IsWindowEnabled(osk) == TRUE.  So We should call tabtip.exe even if it is invisible.